Fixes navigation collapsable pop #3

--- a/css/main.css
+++ b/css/main.css
@@ -45,8 +45,7 @@ nav {
 
 #navigator .layer {
   border-left: 3px solid black;
-  padding: 0 10px;
-  margin: 20px 0;
+  padding: 10px 10px;
 }
 
 #navigator .document {
